simplify package.json & deterministic bundling

--- a/ui/bits/package.json
+++ b/ui/bits/package.json
@@ -39,44 +39,44 @@
   },
   "sideEffects": false,
   "lichess": {
-    "modules": {
-      "src/bits.account.ts": "bits.account",
-      "src/bits.appeal.ts": "bits.appeal",
-      "src/bits.captcha.ts": "bits.captcha",
-      "src/bits.challengePage.ts": "bits.challengePage",
-      "src/bits.checkout.ts": "bits.checkout",
-      "src/bits.clas.ts": "bits.clas",
-      "src/bits.cms.ts": "bits.cms",
-      "src/bits.coachForm.ts": "bits.coach.form",
-      "src/bits.contact.ts": "bits.contact",
-      "src/bits.cropDialog.ts": "bits.cropDialog",
-      "src/bits.dailyFeed.ts": "bits.dailyFeed",
-      "src/bits.diagnosticDialog.ts": "bits.diagnosticDialog",
-      "src/bits.eventCountdown.ts": "bits.eventCountdown",
-      "src/bits.expandText.ts": "bits.expandText",
-      "src/bits.flairPicker.ts": "bits.flairPicker",
-      "src/bits.flatpickr.ts": "bits.flatpickr",
-      "src/bits.forum.ts": "bits.forum",
-      "src/bits.gameSearch.ts": "bits.gameSearch",
-      "src/bits.infiniteScroll.ts": "bits.infiniteScroll",
-      "src/bits.login.ts": "bits.login",
-      "src/bits.lpv.ts": "bits.lpv",
-      "src/bits.passwordComplexity.ts": "bits.passwordComplexity",
-      "src/bits.plan.ts": "bits.plan",
-      "src/bits.publicChats.ts": "bits.publicChats",
-      "src/bits.relayForm.ts": "bits.relayForm",
-      "src/bits.soundMove.ts": "bits.soundMove",
-      "src/bits.streamer.ts": "bits.streamer",
-      "src/bits.team.ts": "bits.team",
-      "src/bits.teamBattleForm.ts": "bits.teamBattleForm",
-      "src/bits.tourForm.ts": "bits.tourForm",
-      "src/bits.tvGames.ts": "bits.tvGames",
-      "src/bits.ublog.ts": "bits.ublog",
-      "src/bits.ublogForm.ts": "bits.ublogForm",
-      "src/bits.user.ts": "bits.user",
-      "src/bits.userComplete.ts": "bits.userComplete",
-      "src/bits.userGamesDownload.ts": "bits.userGamesDownload"
-    },
+    "bundles": [
+      "src/bits.account.ts",
+      "src/bits.appeal.ts",
+      "src/bits.captcha.ts",
+      "src/bits.challengePage.ts",
+      "src/bits.checkout.ts",
+      "src/bits.clas.ts",
+      "src/bits.cms.ts",
+      "src/bits.coachForm.ts",
+      "src/bits.contact.ts",
+      "src/bits.cropDialog.ts",
+      "src/bits.dailyFeed.ts",
+      "src/bits.diagnosticDialog.ts",
+      "src/bits.eventCountdown.ts",
+      "src/bits.expandText.ts",
+      "src/bits.flairPicker.ts",
+      "src/bits.flatpickr.ts",
+      "src/bits.forum.ts",
+      "src/bits.gameSearch.ts",
+      "src/bits.infiniteScroll.ts",
+      "src/bits.login.ts",
+      "src/bits.lpv.ts",
+      "src/bits.passwordComplexity.ts",
+      "src/bits.plan.ts",
+      "src/bits.publicChats.ts",
+      "src/bits.relayForm.ts",
+      "src/bits.soundMove.ts",
+      "src/bits.streamer.ts",
+      "src/bits.team.ts",
+      "src/bits.teamBattleForm.ts",
+      "src/bits.tourForm.ts",
+      "src/bits.tvGames.ts",
+      "src/bits.ublog.ts",
+      "src/bits.ublogForm.ts",
+      "src/bits.user.ts",
+      "src/bits.userComplete.ts",
+      "src/bits.userGamesDownload.ts"
+    ],
     "sync": {
       "node_modules/cropperjs/dist/cropper.min.css": "public/npm",
       "../../node_modules/chessground/dist/chessground.min.js": "public/npm"
