prevent esbuild from changing vosk asset hash

--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -21,7 +21,7 @@
   },
   "lichess": {
     "bundles": [
-      "src/vosk.ts",
+      "src/voice.vosk.ts",
       "src/move/voice.move.ts"
     ],
     "sync": {
