--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "url": "https://github.com/lichess-org/lila/issues"
   },
   "homepage": "https://lichess.org",
+  "packageManager": "pnpm@9.0.4",
   "engines": {
-    "node": ">=14",
-    "pnpm": "^8.7"
+    "node": ">=18",
+    "pnpm": "^9"
   },
   "lint-staged": {
     "*.{js,ts,md,json,scss}": "prettier --write"
