--- a/ui/voice/tsconfig.json
+++ b/ui/voice/tsconfig.json
@@ -8,5 +8,9 @@
     "composite": true
   },
   "isolatedModules": true,
-  "references": [{ "path": "../common/tsconfig.json" }, { "path": "../chess/tsconfig.json" }]
+  "references": [
+    { "path": "../common/tsconfig.json" },
+    { "path": "../chess/tsconfig.json" },
+    { "path": "../game/tsconfig.json" }
+  ]
 }
