jest test environment: jsdom->node

--- a/ui/package.json
+++ b/ui/package.json
@@ -10,8 +10,7 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest": "^29.7.0"
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
