implement snabbdom skeleton

--- a/ui/learn/package.json
+++ b/ui/learn/package.json
@@ -15,7 +15,8 @@
     "chess.js": "github:ornicar/chess.js#learn",
     "chessground": "4.4.2",
     "common": "workspace:*",
-    "mithril": "github:ornicar/mithril.js#lila-1"
+    "mithril": "github:ornicar/mithril.js#lila-1",
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "bundles": "src/learn.ts"
