--- a/ui/lobby/tsconfig.json
+++ b/ui/lobby/tsconfig.json
@@ -1,13 +1,9 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "noEmit": true
+    "outDir": "dist",
+    "rootDir": "src",
+    "composite": true
   },
-  "isolatedModules": true,
-  "references": [
-    { "path": "../common/tsconfig.json" },
-    { "path": "../dasher/tsconfig.json" },
-    { "path": "../setup/tsconfig.json" }
-  ]
+  "references": [{ "path": "../common/tsconfig.json" }, { "path": "../dasher/tsconfig.json" }]
 }
