--- a/ui/.build/package.json
+++ b/ui/.build/package.json
@@ -10,6 +10,7 @@
     "@types/tinycolor2": "^1.4.6",
     "esbuild": "^0.20.2",
     "fast-glob": "^3.3.2",
+    "json5": "^2.2.3",
     "tinycolor2": "^1.6.0",
     "typescript": "^5.4.3"
   },
