--- a/ui/common/tsconfig.json
+++ b/ui/common/tsconfig.json
@@ -4,8 +4,6 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "src",
-    "types": ["lichess", "web"],
-    "composite": true,
-    "incremental": true
+    "composite": true
   }
 }
