--- a/ui/analyse/package.json
+++ b/ui/analyse/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@badrap/result": "^0.2.13",
     "@types/debounce-promise": "^3.1.9",
+    "@types/sortablejs": "^1.15.8",
     "@types/yaireo__tagify": "4.17.5",
     "@yaireo/tagify": "4.17.9",
     "ceval": "workspace:*",
@@ -31,6 +32,7 @@
     "prop-types": "^15.8.1",
     "shepherd.js": "^11.2.0",
     "snabbdom": "3.5.1",
+    "sortablejs": "^1.15.2",
     "tree": "workspace:*"
   },
   "lichess": {
@@ -39,7 +41,8 @@
       "src/plugins/analyse.study.ts",
       "src/plugins/analyse.nvui.ts",
       "src/plugins/analyse.study.topic.form.ts",
-      "src/plugins/analyse.study.tour.ts"
+      "src/plugins/analyse.study.tour.ts",
+      "src/plugins/sortable.ts"
     ],
     "sync": {
       "node_modules/@yaireo/tagify/dist/tagify.min.js": "public/npm/tagify"
