--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "journal": "journalctl --user -fu lila -o cat",
     "metals": "tail -F .metals/metals.log | stdbuf -oL cut -c 21- | rg -v '(notification for request|handleCancellation)'",
     "serverlog": "pnpm journal & pnpm metals",
-    "multilog": "pnpm serverlog & ui/build -r",
-    "muxlog": "tmux new-session -d -s muxlog 'pnpm journal | grep -E -v fishnet & ui/build -cdr & wait; exec bash' \\; attach-session -t muxlog"
+    "multilog": "pnpm serverlog & ui/build -r"
   }
 }
