--- a/ui/bits/package.json
+++ b/ui/bits/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "@fnando/sparkline": "^0.3.10",
-    "@toast-ui/editor": "3.1.7",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
+    "@toast-ui/editor": "3.1.7",
     "@types/debounce-promise": "^3.1.6",
     "@types/fnando__sparkline": "^0.3.7",
+    "@types/qrcode": "^1.5.5",
     "@types/yaireo__tagify": "4.17.5",
     "@types/zxcvbn": "^4.4.4",
     "@yaireo/tagify": "4.17.9",
@@ -34,6 +35,7 @@
     "flatpickr": "^4.6.13",
     "lichess-pgn-viewer": "^2.1.0",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.3",
     "tablesort": "^5.3.0",
     "zxcvbn": "^4.4.2"
   },
@@ -73,6 +75,7 @@
       "src/bits.teamBattleForm.ts",
       "src/bits.tourForm.ts",
       "src/bits.tvGames.ts",
+      "src/bits.twofactor.ts",
       "src/bits.ublog.ts",
       "src/bits.ublogForm.ts",
       "src/bits.user.ts",
