--- a/ui/analyse/package.json
+++ b/ui/analyse/package.json
@@ -41,11 +41,11 @@
       "src/plugins/analyse.study.ts",
       "src/plugins/analyse.nvui.ts",
       "src/plugins/analyse.study.topic.form.ts",
-      "src/plugins/analyse.study.tour.ts",
-      "src/plugins/sortable.ts"
+      "src/plugins/analyse.study.tour.ts"
     ],
     "sync": {
-      "node_modules/@yaireo/tagify/dist/tagify.min.js": "public/npm/tagify"
+      "node_modules/@yaireo/tagify/dist/tagify.min.js": "public/npm/tagify",
+      "node_modules/sortablejs/modular/sortable.esm.js": "public/npm"
     }
   }
 }
