Convert game pgn importer to typescript

--- a/ui/bits/package.json
+++ b/ui/bits/package.json
@@ -62,6 +62,7 @@
       "src/bits.forum.ts",
       "src/bits.gameSearch.ts",
       "src/bits.hcaptcha.ts",
+      "src/bits.importer.ts",
       "src/bits.infiniteScroll.ts",
       "src/bits.login.ts",
       "src/bits.lpv.ts",
