Fix insight refresh button when there's stale data

--- a/ui/insight/package.json
+++ b/ui/insight/package.json
@@ -19,6 +19,9 @@
     "snabbdom": "3.5.1"
   },
   "lichess": {
-    "bundles": "src/insight.ts"
+    "bundles": [
+      "src/insight.ts",
+      "src/insight.refresh.ts"
+    ]
   }
 }
