Refactor QR codes

--- a/ui/bits/package.json
+++ b/ui/bits/package.json
@@ -70,6 +70,7 @@
       "src/bits.passwordComplexity.ts",
       "src/bits.plan.ts",
       "src/bits.publicChats.ts",
+      "src/bits.qrcode.ts",
       "src/bits.relayForm.ts",
       "src/bits.soundMove.ts",
       "src/bits.streamer.ts",
@@ -77,7 +78,6 @@
       "src/bits.teamBattleForm.ts",
       "src/bits.tourForm.ts",
       "src/bits.tvGames.ts",
-      "src/bits.twofactor.ts",
       "src/bits.ublog.ts",
       "src/bits.ublogForm.ts",
       "src/bits.user.ts",
