sync only a list of relay tour ids
useful in dev env

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -125,6 +125,9 @@ puzzle {
     path = puzzle2_path
   }
 }
+relay {
+  syncOnlyIds = null
+}
 storm.secret = "somethingElseInProd"
 coordinate {
   collection {
